--- a/src/app/website/pages/contacto/contacto.component.html
+++ b/src/app/website/pages/contacto/contacto.component.html
@@ -5,7 +5,7 @@
   <div class="contact-container">
     <div class="map" #map></div>
     <div class="contact-container__info bg-primary-200">
-      <div class="flow padding-block-500" data-spacing="loose">
+      <div class="container flow padding-block-500" data-spacing="loose">
         <h1 class="fs-800 fw-bold text-primary-400">Pelupet's</h1>
         <div class="flow" data-spacing="tighter">
           <div class="fs-625 text-neutral-500">
